--- a/segundaEntrega/.env
+++ b/segundaEntrega/.env
@@ -1,3 +1,3 @@
-MONGO_URI='mongodb://localhost:27017/ecommerce'
+MONGO_URI='mongodb://localhost:27017/ecommerce?authSource=admin'
 # Token para autorizar los Endpoints
 TOKEN=gismongo
